fix: bug fixes, added comments, and updated README
